# search_engine

./: .gitignore  CMakeLists.txt  README.md  config.json  requests.json
resources/: file001.txt  file002.txt
src/: ConverterJSON.cpp  ConverterJSON.h  InvertedIndex.cpp  InvertedIndex.h  SearchServer.cpp  SearchServer.h  main.cpp
tests/: test_inverted_index.cpp  test_search_server.cpp
